--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-        <img src="./Screenshot_17-10-2024_91316_mixlr.com.jpeg" alt="">
+        <img src="./multimedia/Screenshot_17-10-2024_91316_mixlr.com.jpeg" alt="">
             <a href="#">Features</a>
             <a href="#">Listing</a>
             <a href="#">Pricing</a>
@@ -37,12 +37,12 @@
 
 
         <div>
-        <img src="./list-feature-audio-setup-704-855fb91a3b4701596755c6a453313978c62ee035dc14f95d208ff8c876e138cb.png" alt="">
+        <img src="./multimedia/list-feature-audio-setup-704-855fb91a3b4701596755c6a453313978c62ee035dc14f95d208ff8c876e138cb.png" alt="">
         </div>
      </div>
 
      <div class="cat">
-        <img src="./list-feature-audience-704-977d2558b4b3b0b26401899c15762c391ea36d97f49fcc25f5c6ebea54b61cae.png" alt="">
+        <img src="./multimedia/list-feature-audience-704-977d2558b4b3b0b26401899c15762c391ea36d97f49fcc25f5c6ebea54b61cae.png" alt="">
         <div class="dog">
             <h2>No limits to audience size</h2>
             <p>Reach an audience as big as you need. Connect, chat and engage with listeners all over the world with the confidence that everyone will be able to connect to your live stream. Mixlr has dedicated servers set aside, allowing you to scale your broadcasts as big as you need without extra costs.</p>
@@ -58,12 +58,12 @@
 
 
         <div>
-        <img src="./list-feature-personalise-704-116bae5f5f4964a16d16d8800540c5583229eebdff83b2d14a9b459aace9841a.png" alt="">
+        <img src="./multimedia/list-feature-personalise-704-116bae5f5f4964a16d16d8800540c5583229eebdff83b2d14a9b459aace9841a.png" alt="">
         </div>
      </div>
 
      <div class="cat">
-        <img src="./list-feature-recordings-704-862b171b4c222768d374f1efed0d7c370ca17c3498ccca924651f6c047f9074a.png" alt="">
+        <img src="multimedia/list-feature-recordings-704-862b171b4c222768d374f1efed0d7c370ca17c3498ccca924651f6c047f9074a.png" alt="">
         <div class="dog">
             <h2>Showcase your recordings collection</h2>
             <p> Record your broadcasts and publish them to your channel when you're ready. Listeners can visit your entire archive of past broadcasts and share direct links to their favorites.</p>
@@ -79,7 +79,7 @@
 
 
         <div>
-        <img src="./list-feature-embeddable-704-d586f5641dec19be526577f1d799a05b77d23428f90489afc9a5a7b147861b28.png" alt="">
+        <img src="multimedia/list-feature-recordings-704-862b171b4c222768d374f1efed0d7c370ca17c3498ccca924651f6c047f9074a.png" alt="">
         </div>
      </div>
       <center>
